--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <link rel="stylesheet" href="styles.css" />
     <meta charset="UTF-8" />
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Etch-a-Sketch</title>
   </head>
-  <body></body>
+  <body>
+    <div class="container"></div>
+  </body>
 </html>
