--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Etch-a-Sketch</title>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="grid"></div>
   </body>
 </html>
