--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <meta charset="UTF-8" />
-    <script src="script.js" defer></script>
-    <title>Etch-a-Sketch</title>
-  </head>
-  <body>
-    <div class="grid"></div>
-  </body>
+
+<head>
+  <link rel="stylesheet" href="styles.css" />
+  <meta charset="UTF-8" />
+  <script src="script.js" defer></script>
+  <title>Etch-a-Sketch</title>
+</head>
+
+<body>
+  <button>Generate New Grid</button>
+  <div>
+    <div class="grid">
+    </div>
+  </div>
+</body>
+
 </html>
